--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,14 @@
 [API]
-value = 70158c435ef77e8ea49678c56ecfcd8b5487c7a3
+value = 
 
 [URL]
-url = http://192.168.154.128/issues.json
-upload_url = http://192.168.154.128/uploads.json
+url = 
+upload_url = 
 
 [RESOURCES]
-project_id = 118
-tracker_id = 88
-subject = VW380 / New splices
+project_id = 
+tracker_id = 
+subject = 
 
 [PATH]
-path = z:\Sequencer\Test_New_VW380\
+path = 
